# internal/handler/dto/product_request.go
@@ -1,17 +1,15 @@
 package dto
 
-import "encoding/json"
-
 type CreateProductRequest struct {
-	Name        string   `json:"name" binding:"required"`
-	Description *string  `json:"description"`
-	SalePrice   *float64 `json:"sale_price"`
-	Price       float64  `json:"price" binding:"required"`
+	Name        string   `json:"name" binding:"required" example:"Product Name"`
+	Description *string  `json:"description" example:"Product Description"`
+	SalePrice   *float64 `json:"sale_price" example:"80.00"`
+	Price       float64  `json:"price" binding:"required" example:"100.00"`
 }
 
 type UpdateProductRequest struct {
-	Name        json.RawMessage `json:"name" swagtype:"string"`
-	Description json.RawMessage `json:"description" swagtype:"string"`
-	SalePrice   json.RawMessage `json:"sale_price" swagtype:"number"`
-	Price       json.RawMessage `json:"price" swagtype:"number"`
+	Name        *string  `json:"name" example:"Updated Name"`
+	Description *string  `json:"description" example:"Updated Description"`
+	SalePrice   *float64 `json:"sale_price" example:"80.00"`
+	Price       *float64 `json:"price" example:"100.00"`
 }
